fix: avoid image/video layout shifts (#2752)
* proof of concept no.71

* proof of concept no.72

* move MediaOrLink, prepare for refactor

* remove legacy MediaOrLink

* media error placeholder retaining dimensions

* amend

* split sized/unsized media css

* embed tweaks, more loading placeholders

* avoid lexical reader re-render by using string lexicalState rather than object (re-render due to ref changes), tweaks to loading presentations

* fix video loading placeholder

* just create media container during html ssr instead of hiding the media (avoids double fetch)

* pre-populate imgproxyUrls with upload data to avoid layout shifts on uploaded media

* fix: also gather video width and height on file upload

* upload: add support for item updates, centralize logic

* cleanup: switch back to DecoratorNode for MediaNode, remove console.log

* fix: ignore html hr on padding rules

* preserve scroll when rendering media, helps with autolinks deferred loading

* simplify media loading placeholder, add .spin.fade-in animation to globals

* cleanup: MediaNode export/import span

* pulsating autolink while media loads

* fix outlawed reset decoration

* media error: minimum width and url with ellipsis

* correct importDOM support; correct conditional linkFallback renderings

* use lexicalState string for bulletins

* force overflow check on media load, fixes chromium-specific spec approach

* html: export span even for autolinks

* embeds: move dimensions and styling to lexical stylesheet, preserve space for embeds in html ssr

* rename sn-text--toplevel to topLevel, ensures symmetry with other consumers of topLevel such as ItemEmbed

* proposal: replace react-youtube with react-lite-youtube-embed

* safe usage of classList

* check window presence on preserveScroll

* spawn the sn-media container when we have a style obtained with useMediaHelper, it only happens when we don't pass the srcSet via Lexical

* show url on hover

* media error: ensure a minimum width of 50p

--- a/components/text.module.css
+++ b/components/text.module.css
@@ -329,7 +329,9 @@
     max-width: 320px;
 }
 
-.topLevel .videoWrapper, :global(.topLevel) .videoWrapper {
+.topLevel .videoWrapper,
+:global(.topLevel) .videoWrapper,
+:global(.topLevel) .videoWrapper {
     max-width: 640px;
     margin: 0.75rem 0;
 }
@@ -372,7 +374,9 @@
     overflow: hidden;
 }
 
-.topLevel .twitterContained, :global(.topLevel) .twitterContained {
+.topLevel .twitterContained,
+:global(.topLevel) .twitterContained,
+:global(.topLevel) .twitterContained {
     height: 200px;
 }
 
@@ -393,7 +397,9 @@
     padding-right: 12px;
 }
 
-.topLevel .tweetsSkeleton, :global(.topLevel) .tweetsSkeleton {
+.topLevel .tweetsSkeleton,
+:global(.topLevel) .tweetsSkeleton,
+:global(.topLevel) .tweetsSkeleton {
     max-width: 550px;
 }
 
@@ -408,7 +414,9 @@
     padding: 1.5rem;
 }
 
-.topLevel .tweetSkeleton, :global(.topLevel) .tweetSkeleton {
+.topLevel .tweetSkeleton,
+:global(.topLevel) .tweetSkeleton,
+:global(.topLevel) .tweetSkeleton {
     height: 200px;
 }
 
